<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_repo"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_label_login"
        style="@style/style_tv_label"
        android:text="@string/tv_label_login"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_login"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_detail_login"
        style="@style/style_tv_detail"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textline"
        app:layout_constraintBottom_toTopOf="@+id/tv_label_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_login"
        tools:text="Login" />

    <TextView
        android:id="@+id/tv_label_name"
        style="@style/style_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_label_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_login" />

    <TextView
        android:id="@+id/tv_detail_name"
        style="@style/style_tv_detail"
        android:background="@drawable/textline"
        app:layout_constraintBottom_toTopOf="@+id/tv_label_location"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_name"
        tools:text="Nama" />

    <TextView
        android:id="@+id/tv_label_location"
        style="@style/style_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_label_location"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

    <TextView
        android:id="@+id/tv_detail_location"
        style="@style/style_tv_detail"
        android:background="@drawable/textline"
        app:layout_constraintBottom_toTopOf="@+id/tv_label_company"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_location"
        tools:text="@string/tv_item_lokasi" />

    <TextView
        android:id="@+id/tv_label_company"
        style="@style/style_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/tv_label_company"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_location" />

    <TextView
        android:id="@+id/tv_detail_company"
        style="@style/style_tv_detail"
        android:background="@drawable/textline"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_followers"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_location"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_company"
        tools:text="@string/tv_item_company" />

    <TextView
        android:id="@+id/tv_detail_repo"
        style="@style/style_tv_detailFollow"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/repository" />

    <TextView
        android:id="@+id/tv_label_repo"
        style="@style/style_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/repository"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_repo"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_repo"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_repo" />

    <TextView
        android:id="@+id/tv_detail_followers"
        style="@style/style_tv_detailFollow"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_repo"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_following"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_company"
        tools:text="@string/followers" />

    <TextView
        android:id="@+id/tv_label_followers"
        style="@style/style_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/followers"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_followers"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_followers" />

    <TextView
        android:id="@+id/tv_detail_following"
        style="@style/style_tv_detailFollow"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_repo"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_company"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_company"
        tools:text="@string/following" />

    <TextView
        android:id="@+id/tv_label_following"
        style="@style/style_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/following"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_following"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_following" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_repo"
        app:tabIndicatorColor="@color/orange1"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

</androidx.constraintlayout.widget.ConstraintLayout>